# audiopro

./: .env.template  .gitignore  CLAUDE.md  Makefile  config.yaml  pyproject.toml
audifonospro/: __init__.py  config.py  main.py  project.md
audifonospro/anc/: __init__.py  pipewire_anc.py
audifonospro/audio/: __init__.py  bluetooth.py  capture.py  playback.py  resampler.py  routing.py
audifonospro/ble/: __init__.py
audifonospro/cinema/: __init__.py  gst_router.py  mpv_player.py  subtitles.py
audifonospro/controls/: __init__.py  evdev_listener.py
audifonospro/db/: __init__.py  database.py  devices.py  phrases.py  routing.py  sessions.py
audifonospro/dbus/: __init__.py  status_writer.py
audifonospro/eq/: __init__.py  pipewire_eq.py
audifonospro/gnome_ext/: __init__.py  extension.js  installer.py  metadata.json  stylesheet.css
audifonospro/monitor/: __init__.py  bluetooth_monitor.py  bt_manager.py  device_enumerator.py  device_info.py  pipewire_monitor.py
audifonospro/pipeline/: __init__.py  coordinator.py
audifonospro/profiles/: __init__.py
audifonospro/stacks/: __init__.py  manager.py
audifonospro/stt/: __init__.py  whisper_stt.py
audifonospro/translation/: __init__.py  translator.py
audifonospro/tts/: __init__.py  tts_engine.py
audifonospro/ui/: __init__.py  app.py
audifonospro/ui/gtk/: __init__.py  app.py  cinema_window.py  subtitle_window.py  window.py
audifonospro/ui/tabs/: __init__.py  controls.py  devices.py  eq.py  monitor.py  settings.py  stacks.py  (+1 more)
audifonospro/vad/: __init__.py  energy_vad.py
docs/: index.html
(+14 files in other folders)
